fix notification overflow when name is logn

--- a/src/components/style/NotificationsPage.scss
+++ b/src/components/style/NotificationsPage.scss
@@ -21,7 +21,8 @@
     @extend %card;
     width: 100%;
     max-width: 100%;
-    margin: 0 1em;
+    padding-bottom: 2em;
+    min-height: 6em;
     background-color: var.$background-2;
     position: relative;
     cursor: pointer;
@@ -36,22 +37,26 @@
       text-align: end;
     }
     .notification-link {
-      position: absolute;
       inset: 0;
+      margin-left: 5.4em;
+      display: flex;
       span {
-        margin-left: 7rem;
-        margin-top: 1rem;
+        align-self: center;
         display: inline-block;
         font-size: 1em;
       }
     }
     .image-link {
+      position: absolute;
+      margin-left: 0rem;
+      margin-top: 0rem;
       z-index: 1;
       border-radius: 50%;
       width: fit-content;
       img {
         border-radius: 50%;
         max-height: 5rem;
+        max-width: 5rem;
         transition: 0.3s;
         &:hover {
           transform: scale(1.2);
